# json

./: CMakeLists - Copy.txt  CMakeLists.txt  README.md
include/json/: json.h
source/: json.cpp  json.cppm
standalone/: CMakeLists.txt
standalone/source/: main.cpp
